--- a/gui/azure_config_common.ui
+++ b/gui/azure_config_common.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>993</width>
-    <height>392</height>
+    <height>395</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -302,17 +302,10 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
-           <widget class="QComboBox" name="dropDown_streaming_fileCachingLevel">
-            <item>
-             <property name="text">
-              <string>Handle level</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>File level</string>
-             </property>
-            </item>
+           <widget class="QCheckBox" name="checkbox_streaming_fileCachingLevel">
+            <property name="text">
+             <string/>
+            </property>
            </widget>
           </item>
           <item>
