Advanced settings reset changes button

--- a/gui/azure_config_advanced.ui
+++ b/gui/azure_config_advanced.ui
@@ -302,7 +302,7 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Reset Default Settings</string>
+      <string>Reset Changes</string>
      </property>
      <property name="default">
       <bool>false</bool>
