Rename the 'okay' button to save.

--- a/gui/azure_config_advanced.ui
+++ b/gui/azure_config_advanced.ui
@@ -321,7 +321,7 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>okay</string>
+      <string>Save</string>
      </property>
     </widget>
    </item>
