--- a/gui/azure_config_common.ui
+++ b/gui/azure_config_common.ui
@@ -611,7 +611,7 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Okay</string>
+      <string>Save</string>
      </property>
     </widget>
    </item>
