--- a/gui/lyve_config_advanced.ui
+++ b/gui/lyve_config_advanced.ui
@@ -55,7 +55,7 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>okay</string>
+      <string>Save</string>
      </property>
     </widget>
    </item>
