--- a/gui/lyve_config_common.ui
+++ b/gui/lyve_config_common.ui
@@ -404,7 +404,7 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Okay</string>
+      <string>Save</string>
      </property>
     </widget>
    </item>
