--- a/gui/azure_config_advanced.ui
+++ b/gui/azure_config_advanced.ui
@@ -398,9 +398,9 @@
              </widget>
             </item>
             <item>
-             <widget class="QSpinBox" name="spinBox_fileCache_timeout">
+             <widget class="QSpinBox" name="spinBox_fileCache_evictionTimeout">
               <property name="maximum">
-               <number>3000</number>
+               <number>1000000</number>
               </property>
               <property name="value">
                <number>120</number>
@@ -410,7 +410,7 @@
             <item>
              <widget class="QSpinBox" name="spinBox_fileCache_maxEviction">
               <property name="maximum">
-               <number>15000</number>
+               <number>1000000</number>
               </property>
               <property name="value">
                <number>5000</number>
@@ -420,7 +420,7 @@
             <item>
              <widget class="QSpinBox" name="spinBox_fileCache_maxCacheSize">
               <property name="maximum">
-               <number>3000</number>
+               <number>1000000</number>
               </property>
              </widget>
             </item>
