--- a/gui/azure_config_common.ui
+++ b/gui/azure_config_common.ui
@@ -101,7 +101,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QSpinBox" name="spinBox_libfuse_attributeExp">
+        <widget class="QSpinBox" name="spinBox_libfuse_attExp">
          <property name="maximum">
           <number>3000</number>
          </property>
@@ -111,7 +111,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QSpinBox" name="spinBox_libfuse_entryExp">
+        <widget class="QSpinBox" name="spinBox_libfuse_entExp">
          <property name="maximum">
           <number>3000</number>
          </property>
